--- a/ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
+++ b/ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
@@ -77,6 +77,7 @@ api:
 
 #Enable Over the Air updates
 ota:
+  - platform: esphome
 
 dashboard_import:
   package_import_url:  github://smarthomeshop/ultimatesensor-mini/ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml@main
