--- a/ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
+++ b/ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
@@ -85,6 +85,7 @@ wifi:
   # remove leading '#' and fill in your wifi details
   ssid: !secret wifi_ssid
   password: !secret wifi_password
+  fast_connect: True #If enabled, directly connects to WiFi network without doing a full scan first. This is required for hidden networks and can significantly improve connection times.
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
