--- a/.github/workflows/compile-esphome.yml
+++ b/.github/workflows/compile-esphome.yml
@@ -1,41 +1,47 @@
-name: Compile ESPHome Binary
+name: Compile ESPHome Binaries
 
 on:
   push:
     paths:
-      - 'ultimatesensor-mini-v1/**.yaml'  # Trigger only on changes to YAML files
-  workflow_dispatch:      # Allows manual triggering of the workflow
+      - 'ultimatesensor-mini-basic.yaml'
+      - 'ultimatesensor-mini-complete.yaml'  # Trigger only on changes to these YAML files
+  workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
-  build:
+  build-basic:
+    name: Build Basic Configuration
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Build ESPHome Firmware (Basic)
+      uses: esphome/build-action@v2
       with:
-        python-version: 3.10.13
+        configuration: ultimatesensor-mini-basic.yaml
 
-    - name: Verify Python Version
-      run: python --version
-
-    - name: Clean Python Environment
-      run: |
-        python -m pip uninstall -y pip
-        python -m ensurepip
-        python -m pip install --upgrade pip setuptools
-
-    - name: Install ESPHome
-      run: pip install esphome==2024.2.1  # Use specific ESPHome version
-
-    - name: Compile ESPHome Binary
-      run: esphome compile ultimatesensor-mini-v1/my_device.yaml
-
-    - name: Upload Binary
+    - name: Upload Firmware Binary (Basic)
       uses: actions/upload-artifact@v3
       with:
-        name: esphome-my_device
-        path: ultimatesensor-mini-v1/build/my_device/.pioenvs/my_device/firmware.bin
+        name: firmware-basic
+        path: .esphome/build/ultimatesensor-mini-basic/.pioenvs/ultimatesensor-mini-basic/firmware.bin
+
+  build-complete:
+    name: Build Complete Configuration
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+
+    - name: Build ESPHome Firmware (Complete)
+      uses: esphome/build-action@v2
+      with:
+        configuration: ultimatesensor-mini-complete.yaml
+
+    - name: Upload Firmware Binary (Complete)
+      uses: actions/upload-artifact@v3
+      with:
+        name: firmware-complete
+        path: .esphome/build/ultimatesensor-mini-complete/.pioenvs/ultimatesensor-mini-complete/firmware.bin
