--- a/.github/workflows/compile-esphome.yml
+++ b/.github/workflows/compile-esphome.yml
@@ -3,8 +3,8 @@ name: Compile ESPHome Binaries
 on:
   push:
     paths:
-      - 'ultimatesensor-mini-basic.yaml'
-      - 'ultimatesensor-mini-complete.yaml'  # Trigger only on changes to these YAML files
+      - 'ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml'
+      - 'ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml'  # Trigger only on changes to these YAML files
   workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
@@ -19,13 +19,13 @@ jobs:
     - name: Build ESPHome Firmware (Basic)
       uses: esphome/build-action@v2
       with:
-        configuration: ultimatesensor-mini-basic.yaml
+        yaml_file: ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml
 
     - name: Upload Firmware Binary (Basic)
       uses: actions/upload-artifact@v3
       with:
         name: firmware-basic
-        path: .esphome/build/ultimatesensor-mini-basic/.pioenvs/ultimatesensor-mini-basic/firmware.bin
+        path: .esphome/build/ultimatesensor-mini-v1/ultimatesensor-mini-basic/.pioenvs/ultimatesensor-mini-basic/firmware.bin
 
   build-complete:
     name: Build Complete Configuration
@@ -38,10 +38,10 @@ jobs:
     - name: Build ESPHome Firmware (Complete)
       uses: esphome/build-action@v2
       with:
-        configuration: ultimatesensor-mini-complete.yaml
+        yaml_file: ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
 
     - name: Upload Firmware Binary (Complete)
       uses: actions/upload-artifact@v3
       with:
         name: firmware-complete
-        path: .esphome/build/ultimatesensor-mini-complete/.pioenvs/ultimatesensor-mini-complete/firmware.bin
+        path: .esphome/build/ultimatesensor-mini-v1/ultimatesensor-mini-complete/.pioenvs/ultimatesensor-mini-complete/firmware.bin
