--- a/.github/workflows/compile-esphome.yml
+++ b/.github/workflows/compile-esphome.yml
@@ -1,57 +1,77 @@
-name: Compile ESPHome Binary
-
+name: Build
+# Build the ESPHome firmwares for the S0tool project.
 on:
   push:
-    paths:
-      - 'ultimatesensor-mini-v1/**.yaml'  # Trigger only on changes to YAML files
-  workflow_dispatch:      # Allows manual triggering of the workflow
+    branches:
+      - main
+  pull_request:
+  workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
   build:
+    name: Build firmware 🛠️
+    uses: esphome/workflows/.github/workflows/build.yml@main
+    with:
+      files: |
+        ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml
+      esphome-version: 2024.11.1
+      release-summary: ${{ github.event_name == 'release' && github.event.release.body || '' }}
+      release-url: ${{ github.event_name == 'release' && github.event.release.html_url || '' }}
+      release-version: ${{ github.event_name == 'release' && github.event.release.tag_name || '' }}
+
+  consolidate:
+    name: Consolidate firmwares 🚀
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: Checkout source code
+        uses: actions/checkout@v4
+      - name: Download built firmwares
+        uses: actions/download-artifact@v4
+        with:
+          path: firmwares
+      - name: Remove intermediate version folder
+        run: |-
+          for d in firmwares/*/*; do
+            if [ -d "$d" ]; then
+              mv $d/* $d/../
+              rm -rf $d
+            fi
+          done
+      - name: Copy files
+        run: |-
+          mkdir output
+          cp -R static/* output/
+          cp -R firmwares/* output/
+      - name: Copy manifest files to root and modify paths # This is required so that older firmwares can update to newer firmwares with new manifest paths
+        run: |-
+          for device in firmwares/*; do
+            device=$(basename $device)
+            jq --arg device "$device" \
+                '.builds[].ota.path |= $device + "/" + . | (.builds[].parts // [])[].path |= $device + "/" + .' \
+                firmwares/$device/manifest.json > output/$device-manifest.json
+          done
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          path: output
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.10
-
-    - name: Install ESPHome
-      run: |
-        python -m pip install --upgrade pip
-        pip install esphome
-
-    - name: Compile ESPHome Binary (Basic)
-      uses: esphome/build-action@v1
-      with:
-        yaml_file: 'ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml'
-
-    - name: Compile ESPHome Binary (Complete)
-      uses: esphome/build-action@v1
-      with:
-        yaml_file: 'ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml'
-
-    - name: Move and Rename Firmware (Basic)
-      run: |
-        mkdir -p ultimatesensor-mini-v1/bin
-        mv .esphome/build/ultimatesensor-mini-v1/.pioenvs/ultimatesensor-mini/firmware.bin ultimatesensor-mini-v1/bin/ultimatesensor-mini-basic-v1.1.bin
-
-    - name: Move and Rename Firmware (Complete)
-      run: |
-        mkdir -p ultimatesensor-mini-v1/bin
-        mv .esphome/build/ultimatesensor-mini-v1/.pioenvs/ultimatesensor-mini/firmware.bin ultimatesensor-mini-v1/bin/ultimatesensor-mini-complete-v1.1.bin
-
-    - name: Upload Artifact (Basic)
-      uses: actions/upload-artifact@v3
-      with:
-        name: esphome-basic-firmware
-        path: ultimatesensor-mini-v1/bin/ultimatesensor-mini-basic-v1.1.bin
-
-    - name: Upload Artifact (Complete)
-      uses: actions/upload-artifact@v3
-      with:
-        name: esphome-complete-firmware
-        path: ultimatesensor-mini-v1/bin/ultimatesensor-mini-complete-v1.1.bin
+  deploy:
+    if: github.event_name == 'release'
+    name: Deploy to GitHub Pages 🚀
+    runs-on: ubuntu-latest
+    needs: consolidate
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4.0.5
