--- a/.github/workflows/compile-esphome.yml
+++ b/.github/workflows/compile-esphome.yml
@@ -1,55 +1,13 @@
-name: Build
-# Build the ESPHome firmwares for the S0tool project.
+name: Build and Publish
+
 on:
   push:
     branches:
       - main
-  pull_request:
-  workflow_dispatch:
-  release:
-    types: [published]
 
 jobs:
   build:
-    name: Build firmware 🛠️
-    uses: esphome/workflows/.github/workflows/build.yml@main
+    uses: esphome/workflows/.github/workflows/publish.yml@main
     with:
-      files: |
-        ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml
-      esphome-version: 2024.11.2
-      release-summary: ${{ github.event_name == 'release' && github.event.release.body || '' }}
-      release-url: ${{ github.event_name == 'release' && github.event.release.html_url || '' }}
-      release-version: ${{ github.event_name == 'release' && github.event.release.tag_name || '' }}
-
-  consolidate:
-    name: Consolidate firmwares 🚀
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
-      - name: Download built firmwares
-        uses: actions/download-artifact@v4
-        with:
-          path: firmwares
-      - name: Remove intermediate version folder
-        run: |-
-          for d in firmwares/*/*; do
-            if [ -d "$d" ]; then
-              mv $d/* $d/../
-              rm -rf $d
-            fi
-          done
-      - name: Copy files
-        run: |-
-          mkdir output
-          cp -R static/* output/
-          cp -R firmwares/* output/
-      - name: Copy manifest files to root and modify paths # This is required so that older firmwares can update to newer firmwares with new manifest paths
-        run: |-
-          for device in firmwares/*; do
-            device=$(basename $device)
-            jq --arg device "$device" \
-                '.builds[].ota.path |= $device + "/" + . | (.builds[].parts // [])[].path |= $device + "/" + .' \
-                firmwares/$device/manifest.json > output/$device-manifest.json
-          done
+      files: ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml
+      name: Ultimatesensor Mini Basic
