--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,6 @@
 # Require maintainer's :+1: for changes to the .github/ repo-config files
 
 .github/* @Diondk
+.github/* @smarthomeshop
 * @Diondk
+* @smarthomeshop
