--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     with:
       files: |
         ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml
-        #ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
+        ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
         
       esphome-version: 2024.10.0
       release-url: "https://github.com/Diondk/ultimatesensor-mini/releases"
