--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Copy files
         run: |-
           mkdir output
-          cp -R static/* output/
-          cp -R firmwares/* output/
+          cp -R ultimatesensor-mini/ultimatesensor-mini/static/* output/
+          cp -R ultimatesensor-mini/ultimatesensor-mini/firmwares/* output/
       - name: Copy manifest files to root and modify paths # This is required so that older firmwares can update to newer firmwares with new manifest paths
         run: |-
           for device in firmwares/*; do
