--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Copy files
         run: |-
           mkdir output
-          cp -R static/* output/
-          cp -R firmwares/* output/
+          cp -R static/ultimatesensor-mini*/* output/
+          cp -R firmwares/ultimatesensor-mini*/* output/
       - name: Copy manifest files to root and modify paths # This is required so that older firmwares can update to newer firmwares with new manifest paths
         run: |-
           for device in firmwares/*; do
