--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,11 @@
-name: Build
-# Build the ESPHome firmwares for the ultimatesensor project.
+name: Build and Push Firmware
+# Build and push the ESPHome firmwares for the ultimatesensor project.
 on:
   push:
-    branches:
-      - main
-  #pull_request:
+    paths:
+      - esphome/ultimatesensor-mini-basic.yaml
+      - esphome/ultimatesensor-mini-complete.yaml
   workflow_dispatch:
-  release:
-    types: [published]
 
 jobs:
   build:
@@ -15,66 +13,37 @@ jobs:
     uses: esphome/workflows/.github/workflows/build.yml@main
     with:
       files: |
-        ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml
-        ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
-        
+        esphome/ultimatesensor-mini-basic.yaml
+        esphome/ultimatesensor-mini-complete.yaml
       esphome-version: 2024.10.0
-      release-url: "https://github.com/Diondk/ultimatesensor-mini/releases"
+      release-url: "https://github.com/Diondk/HomeAssistant-Config/releases"
       release-summary: "** Check the release notes for more information. **"
 
-  consolidate:
-    name: Consolidate firmwares 🚀
+  push_files:
+    name: Push Firmware to Repository 🚀
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4.2.2
+        with:
+          ref: ${{ github.ref }} # Ensure we're working on the current branch
       - name: Download built firmwares
         uses: actions/download-artifact@v4.1.8
         with:
           path: firmwares
-      - name: Debug artifact location
-        run: |
-          echo "Listing all files in the current directory:"
-          ls -R
-      - name: Copy firmware files
+      - name: Copy files to repository directory
         run: |-
-          mkdir -p output
-          for firmware_dir in firmwares/*/*; do
-            cp -R "$firmware_dir"/* output/
-          done
-      - name: Copy and modify manifest files
-        run: |-
-          for device_dir in firmwares/*; do
-            device=$(basename "$device_dir")
-            manifest_file=$(find "$device_dir" -name "manifest.json")
-            if [ -f "$manifest_file" ]; then
-              jq --arg device "$device" \
-                '.builds[].ota.path |= $device + "/" + . | (.builds[].parts // [])[].path |= $device + "/" + .' \
-                "$manifest_file" > output/$device-manifest.json
-            else
-              echo "No manifest.json found for $device"
+          mkdir -p ultimatesensor-mini-v1/bin
+          for d in firmwares/*/*; do
+            if [ -d "$d" ]; then
+              cp -R $d/* ultimatesensor-mini-v1/bin/
             fi
           done
-
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v3.0.1
-        with:
-          path: output    
-      
-
-
-  deploy:
-    name: Deploy to GitHub Pages 🚀
-    runs-on: ubuntu-latest
-    needs: consolidate
-    permissions:
-      pages: write
-      id-token: write
-    steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4.0.5
-              
+      - name: Commit and push changes
+        run: |-
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add ultimatesensor-mini-v1/bin/
+          git commit -m "Update firmware files [ci skip]" || echo "No changes to commit"
+          git push origin ${{ github.ref }}
