--- a/ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
+++ b/ultimatesensor-mini-v1/ultimatesensor-mini-complete.yaml
@@ -192,6 +192,7 @@ light:
     chipset: ws2812
     name: "Back light"
     id: rgb_back_light
+    rmt_symbols: 96
   #WS2812 LED at the front
   - platform: esp32_rmt_led_strip
     rgb_order: GRB
@@ -201,6 +202,7 @@ light:
     chipset: ws2812
     name: "Front light"
     id: rgb_front_light
+    rmt_symbols: 96
 
 
 # Status LED of ESP
