--- a/ultimatesensor-mini-v1/ultimatesensor-mini-common.yaml
+++ b/ultimatesensor-mini-v1/ultimatesensor-mini-common.yaml
@@ -95,6 +95,9 @@ api:
 #Enable Over the Air updates
 ota:
   - platform: esphome
+    id: ota_esphome
+  - platform: http_request
+    id: ota_http_request
 
 http_request:
   useragent: ultimatesensor-mini-esphome
