Update comment for device name in ultimatesensor-mini-basic.yaml to reflect testing status.

--- a/ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml
+++ b/ultimatesensor-mini-v1/ultimatesensor-mini-basic.yaml
@@ -2,7 +2,7 @@
 # This configuration excludes the Particulate Matter (PM) sensor.
 # Use this file if your device does not include the PM/fine dust sensor.
 
-# Name of device.
+# Name of device
 substitutions:
   device_name: ultimatesensor-mini
   friendly_name: "UltimateSensor Mini"
