--- a/ultimatesensor-mini-v1/ultimatesensor-mini-common.yaml
+++ b/ultimatesensor-mini-v1/ultimatesensor-mini-common.yaml
@@ -4,7 +4,8 @@
 substitutions:
   project_main_version: "2"
   project_version: "2.0"
-
+  log_level: "INFO"
+  
 # Esphome start
 esphome:
   name: ${device_name}
@@ -28,6 +29,7 @@ esphome:
       - wait_until: 
           condition:
             wifi.connected
+          timeout: 30s
       - script.execute: play_stream
       # Disable Bluetooth after WiFi is connected to save memory
       - ble.disable:
@@ -92,6 +94,9 @@ script:
 
 # Enable logging
 logger:
+  level: ${log_level}
+  baud_rate: 115200
+  hardware_uart: UART0
 
 # Enable Home Assistant API
 api:
