--- a/ultimatesensor-mini-v1/ultimatesensor-mini-common.yaml
+++ b/ultimatesensor-mini-v1/ultimatesensor-mini-common.yaml
@@ -4,7 +4,8 @@
 substitutions:
   project_main_version: "2"
   project_version: "2.6"
-
+  log_level: "INFO"
+  
 # Esphome start
 esphome:
   name: ${device_name}
