Verbeter WiFi-configuratie in ultimatesensor-mini-common.yaml door gebruikersinstructies toe te voegen voor het instellen van de AP-modus. Verduidelijk dat er geen WiFi-gegevens zijn en geef alternatieve configuratiemethoden aan.

--- a/ultimatesensor-mini-v1/ultimatesensor-mini-common.yaml
+++ b/ultimatesensor-mini-v1/ultimatesensor-mini-common.yaml
@@ -118,12 +118,13 @@ update:
     disabled_by_default: true
 
 wifi:
-  # remove leading '#' and fill in your wifi details
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  fast_connect: ${wifi_fast_connect}
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
+  # No WiFi credentials - device starts in AP mode for initial setup
+  # Users can configure WiFi via:
+  # - Captive Portal (connect to hotspot)
+  # - Improv Serial (via WebTools)
+  # - Improv BLE
+  # - ESPHome dashboard (after adoption)
+  
   ap:
     ssid: ${device_name}
     password: ${device_name}
